--- a/apps/piterator/pom.xml
+++ b/apps/piterator/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>no.politiet.pit.organa.operators</groupId>
+        <groupId>no.politiet.organa</groupId>
         <artifactId>apps</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -14,9 +14,27 @@
 
     <dependencies>
         <dependency>
+            <groupId>no.politiet.organa</groupId>
+            <artifactId>base-framework</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.javaoperatorsdk</groupId>
             <artifactId>operator-framework</artifactId>
             <version>${operator-sdk.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>crd-generator-apt</artifactId>
+            <version>${operator-generator.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
