--- a/apps/piterator/pom.xml
+++ b/apps/piterator/pom.xml
@@ -36,6 +36,12 @@
             <version>${operator-generator.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
