--- a/libs/contract-organa/pom.xml
+++ b/libs/contract-organa/pom.xml
@@ -5,17 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>no.politiet.organa</groupId>
-        <artifactId>operators</artifactId>
+        <artifactId>libs</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <name>Organa :: Operators :: Libs</name>
-    <artifactId>libs</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>contract-organa</artifactId>
+    <name>Organa :: Operators :: Libs :: Contract-Organa</name>
 
-    <modules>
-        <module>base-framework</module>
-        <module>contract-organa</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>io.javaoperatorsdk</groupId>
+            <artifactId>operator-framework</artifactId>
+            <version>${operator-sdk.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
