--- a/apps/piterator/pom.xml
+++ b/apps/piterator/pom.xml
@@ -37,17 +37,17 @@
         </dependency>
 
         <dependency>
-            <groupId>io.fabric8</groupId>
-            <artifactId>crd-generator-apt</artifactId>
-            <version>${operator-generator.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--
+        <dependency>
+            <groupId>io.javaoperatorsdk</groupId>
+            <artifactId>operator-framework-spring-boot-starter-test</artifactId>
+            <version>${operator-sdk.version}</version>
+            <scope>test</scope>
+        </dependency> -->
     </dependencies>
 
 </project>
