--- a/libs/contract-organa/pom.xml
+++ b/libs/contract-organa/pom.xml
@@ -19,6 +19,13 @@
             <version>${operator-sdk.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>crd-generator-apt</artifactId>
+            <version>${operator-generator.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
